<resources>
    <string name="app_name">Луч надежды</string>

    <string name="choice_type">Выберете тип страницы</string>
    <string name="cit_ch">Гражданин</string>
    <string name="org_ch">Организация</string>
    <string name="title_activity_menu">О нас</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Луч надежды</string>
    <string name="about_more">“Люди хотят, но не могут помочь” \n \n
        Из этой фразы родилось наше мобильное приложение, а затем и сайт. \n \n
        Наша команда состоит из людей, которые хотят, чтобы эта фраза стала ложью. \n \n
        Мы реализуем информационную благотворительную площадку,  главная цель которой, сделать проще и понятней процесс помощи нуждающимся. \n \n
        Мы создаем информационную платформу объединяющую неравнодушных людей готовых помочь и  людей которым эта помощь нужна.  \n \n
        Площадка ориентированная под нужды благотворительных организаций… \n \n
        Площадка на которой граждане увидят информацию в одном месте и смогут помочь просто нажав на кнопку… \n \n
        Площадка, чтобы творить добро! \n \n
        Площадка, которую освещает луч надежды!</string>
    <string name="ok">Ок</string>
    <string name="header">Ошибка</string>
    <string name="message">Неизвестная ошибка</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="about_us">О нас</string>
    <string name="back">&lt; Назад</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Бесполезный клик</string>
    <string name="title_activity_menu2">Вопросы и ответы</string>
    <string name="nav_header_subtitle"></string>
    <string name="title_activity_cit_prof">Профиль</string>
    <string name="citname">Имя</string>
    <string name="citname_txt">Иван</string>
    <string name="citfam">Фамилия</string>
    <string name="citfam_txt">Иванович</string>
    <string name="citcity">Город</string>
    <string name="citcity_txt">Кострома</string>
    <string name="citnumb">Номер</string>
    <string name="citnumb_txt">+7(123)567-89-10</string>
    <string name="citbout">О себе</string>
    <string name="orgabout">Описание</string>
    <string name="citbout_txt">Хочу помогать людям и быть полезным обществу. Могу быть авто волонтёром. Люблю кататься на лыжах.</string>
    <string name="citedit">🖊 Редактировать профиль</string>
    <string name="writetoorg">💭 Написать</string>
    <string name="title_activity_citedit">Редактировать профиль</string>
    <string name="citeditsave">Сохранить</string>
    <string name="citeditcan">Отмена</string>
    <string name="title_activity_list_of_org">Список организаций</string>
    <string name="title_activity_view_org">Организация</string>
    <string name="ContactInfo">Контактная информация</string>
    <string name="tx_ContactInfo">ПРАВО НА ЖИЗНЬ \n
    * e-mail: pravonajizn44@ya.ru  \n
        * инстаграм: https://www.instagram.com/pravonajizn44/  \n
        * мы на одноклассниках: http://www.odnoklassniki.ru/helptoanimals  \n
        * мы на фейсбук: https://www.facebook.com/groups/1698589217118715/  \n
        БАНКОВСКИЕ РЕКВИЗИТЫ: ИНН ********** КПП ********* БИК 043469623*********  \n
        ГОЛОДНЫЙ ТЕЛЕФОН: +7-905-152-91-48 (Билайн Кострома)</string>
    <string name="tx_aboutOrg">Костромская региональная общественная организация помощи животным "Право на жизнь" (КРОО "Право на жизнь")</string>
    <string name="doc">Документы</string>
    <string name="tx_doc">https://docs.google.com/document/d/1GUKsUpdajgjGX1Ax1QW1OQ8lLHU0gPVcGIWZuk5Xp5g \n
    https://github.com/SamuraSwordS/Competition-TELE2 \n
    https://github.com/SamuraSwordS/Competition-TELE2/issues/3
    </string>
    <string name="needs">Нужды</string>
    <string name="activity">Мероприятия</string>
    <string name="event">События</string>
    <string name="title_activity_activ_mer">Мероприятия</string>
    <string name="nameofmer">Здесь должно быть название</string>
    <string name="returntoorgbittom">Перейти на страницу организации</string>
    <string name="erabout">Здесь содержится некое описание мероприятия
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n</string>
    <string name="title_activity_my_org_prof">Профиль</string>
    <string name="title_activity_need_view">Нужды</string>
    <string name="needaboutt">Здесь содержится некое описание нужды
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n</string>
    <string name="eventaboutt">Здесь содержится некое описание события
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n
    ...................................................................... \n</string>
    <string name="title_activity_event_view">События</string>

</resources>
